# karorkefz

./: 6_5_13_274.json  README.md  index.html
app/: CMakeLists.txt  build.gradle
app/release/: karorfz_2.1.apk  karorfz_2.4.apk  output.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: Constant.cpp  NetWork.c
app/src/main/cpp/include/Constant/: cJSON.c
app/src/main/java/com/ms/karorkefz/activity/: HomeActivity.java  SettingsActivity.java
app/src/main/java/com/ms/karorkefz/adapter/: PreferenceAdapter.java
app/src/main/java/com/ms/karorkefz/thread/: MyThread.java  XSingleThreadPool.java
app/src/main/java/com/ms/karorkefz/util/: Adapter.java  ChatList.java  ColationList.java  Constant.java  FileUtil.java  NDKTools.java  ScreenUntil.java  ShotUntil.java  ViewUtil.java
app/src/main/java/com/ms/karorkefz/util/Base/: BasicInit.java  BasicNotification.java  BasicViewNotification.java  ColorUtil.java  GeneralUtils.java  HookInterface.java
app/src/main/java/com/ms/karorkefz/util/Log/: LogUtil.java
app/src/main/java/com/ms/karorkefz/view/: SettingsView.java  UpdateInfoView.java
app/src/main/java/com/ms/karorkefz/xposed/: KaraokeHook.java  Karaoke_KaraScore_Hook.java  Karaoke_Ktv_Hook.java  Karaoke_Live_Hook.java  Karaoke_Load_Hook.java  Karaoke_MainTab_Hook.java  Karaoke_Notification_Hook.java  Karaoke_Other_Hook.java  Karaoke_RecordingActivity_Hook.java  Karaoke_Setting_Hook.java  Karaoke_User_Hook.java  Karaoke_ceshi_Hook.java  init.java
app/src/main/res/xml/: settings.xml
check/: adapter.json  version.json
(+22 files in other folders)
